--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: LIGHTblue;
+    background:#8DA6F2;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -7,15 +7,34 @@ body {
     display: flex;
     padding:10px;
     margin: 10px;
-    background: lightgray; 
+    background: #F2B705; 
+    border-radius: 5px;
 }
 
-.assignment img{
+.assignment img {
     width: 200px;
-    padding: 10px;
+    margin: 10px;
+    border: 2px solid #D2691E;
+}
+
+.assignment img:hover {
+    border: 2px solid #585CA6;
 }
 
 h1 {
-    color: blue;
+    color: #585CA6;
     text-align: center;
+}
+
+h1:hover {
+    color:#D2691E ;
+}
+
+a{
+    text-decoration: none;
+    color: #DC143C;
+}
+
+a:hover {
+    color: #FFF;
 }
