my second assingment

--- a/csce242/assignments/assignment 2/styles.css
+++ b/csce242/assignments/assignment 2/styles.css
@@ -1,6 +1,6 @@
 /* Structure */
 body {
-    background: #2E3A40;
+    background:#513416;
     font-family: 'Roboto', Arial, sans-serif;
     color: #F2F2F2;
     margin: 0;
