--- a/csce242/assignments/assignment_05/styles.css
+++ b/csce242/assignments/assignment_05/styles.css
@@ -46,11 +46,22 @@ body {
 }
 
 .slider-box {
-    margin-top: 10px;
+    position: relative;
     width: 200px;
     height: 200px;
     background-color: #d87070;
     margin: 0 auto;
+    overflow: hidden;
+}
+
+.slider-content {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background-color: #d1d1d1;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
 }
 
 /* Mobile layout */
