--- a/csce242/projects/part 5/style.css
+++ b/csce242/projects/part 5/style.css
@@ -13,7 +13,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: var(--secondary-color);
+    background-color: rgb(249, 249, 244); /* Light blue background */
     color: var(--text-color);
 }
 
@@ -128,6 +128,7 @@ footer {
     text-align: center;
     padding: 10px;
 }
+
 /* Media Queries */
 @media (max-width: 600px) {
     .featured-characters {
