--- a/csce242/projects/part 5/style.css
+++ b/csce242/projects/part 5/style.css
@@ -1,7 +1,7 @@
 /* CSS Variables */
 :root {
     --primary-color: #0066cc;
-    --secondary-color: #ffffff;
+    --secondary-color: #ecdede;
     --text-color: #333333;
 }
 
