--- a/csce242/projects/part 5/style.css
+++ b/csce242/projects/part 5/style.css
@@ -131,21 +131,11 @@ section {
     .character-grid {
         grid-template-columns: repeat(2, 1fr);
     }
-
-    .filter-label {
-        padding: 8px 15px;
-    }
 }
 
 @media (max-width: 480px) {
     .character-grid {
         grid-template-columns: 1fr;
-    }
-
-    .filter-label {
-        margin: 8px;
-        padding: 6px 12px;
-        font-size: 0.9em;
     }
 }
 
@@ -210,7 +200,7 @@ h1, h2, p, ul {
     text-align: center; /* Center-aligns text within sections */
 }
 
-/* Form Styling */
+/* contact us Styling */
 form {
     display: flex;
     flex-direction: column; /* Stacks elements vertically */
