--- a/csce242/projects/part 7/style.css
+++ b/csce242/projects/part 7/style.css
@@ -67,7 +67,28 @@ section {
     margin-bottom: 30px;
     text-align: center;
 }
+/* Video Container Styling */
+.video-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+}
 
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+@media (max-width: 600px) {
+    .intro-section {
+        text-align: center; /* Center text on smaller screens */
+    }
+}
 /* Featured Games Section Styling */
 .featured-section {
     background-color: white;
