--- a/csce242/projects/part 7/style.css
+++ b/csce242/projects/part 7/style.css
@@ -448,6 +448,7 @@ button:hover {
 
     .nav-list {
         display: none; /* Hidden by default */
+        overflow: hidden;
     }
 
     .nav-list.active {
